# spr

./: README.md  pyproject.toml  spr.json
scripts/: pre_build.py
spr/: cistats.py  config.py  evaluation.py  grade.py  repocmd.py  spr.py  student.py
